--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,5 +5,11 @@
     <script src={{ "assets/js/breakpoints.min.js" | absURL }}></script>
     <script src={{ "assets/js/util.js" | absURL }}></script>
     <script src={{ "assets/js/main.js" | absURL }}></script>
+    <script src={{ "https://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.6.5/mousetrap.min.js" | absURL }}></script>
+
+    <script>
+        Mousetrap.bind('j', function() { 'keydown' });
+        Mousetrap.bind("k", function() { 'keyup' });
+    </script>
 
 </html>
